# ChatGPT-Telegram-Bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  AI.py  Dockerfile  Dockerfile.build  Dockerfile.hugging.build  README.Arabic.md  README.French.md  README.md  README.zh-CN.md  README.zh-TW.md  README_CN.md  agent.py  bing.py  bot.py  chat.py  config.py  configure_env.sh  decorators.py  deploy.sh  docker-compose-uni-api.yml  docker-compose.yml  fly.toml  gpt4free.py  index.js  main.py  md2tgmd.py  pyproject.toml  requirements.txt  runasync.py  setup.sh  test.py  text.py  vercel.json  webhook.py
.github/: deploy.sh  fly_deploy.yml  translate.yml
app/: main.py
chatgpt2api/: V3.py  chatgpt2api.py
docker/: Dockerfile  setup.sh
revChatGPT/: V3.py
test/: calc.py  launch_with_clear.py  test.py  test_API.py  test_Faucet.py  test_Web_crawler.py  test_claude.py  test_claude3.py  test_claude_zh_char.py  test_ddg.py  test_dict.py  test_download_pdf.py  test_emogi.py  test_fstring.py  test_gpt4free.py  test_gpt4free_langchain_agent.py  test_groq.py  test_jieba.py  test_json.py  test_keyword.py  test_langchain_search_old.py  test_latex.py  test_latex.scala  test_logging.py  test_long_text.py  test_ollama.py  test_pdf.py  test_re_agent.py  test_re_image.py  test_search.py  test_string_len.py  test_summary.py  test_svg.py  test_tgmd.py  test_tikitoken.py  test_token.py  test_tools_class.py  test_url.py  test_whisper.py  test_yield.py  (+1 more)
utils/: agent.py  chatgpt2api.py  decorators.py  function_call.py  googlesearch.py  gpt4free.py  i18n.py  md2tgmd.py  plugins.py  (+3 more)
(+2 files in other folders)
